@@ -275,7 +275,7 @@ public class PTMPeptidesTablePanel extends HourglassPanel implements DataBoxPane
 
         layeredPane.add(ptmPeptidesPanel, JLayeredPane.DEFAULT_LAYER);
         layeredPane.add(m_infoToggleButton.getInfoPanel(), JLayeredPane.PALETTE_LAYER);
-        layeredPane.add(m_searchToggleButton.getSearchPanel(), new Integer(JLayeredPane.PALETTE_LAYER + 1));
+        layeredPane.add(m_searchToggleButton.getSearchPanel(), Integer.valueOf(JLayeredPane.PALETTE_LAYER + 1));
         setColumnsDefaultVisibility();
     }
 
